<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="6dp">

    <TextView
        android:id="@+id/tvDeviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:text="@string/DeviceName" />

    <TextView
        android:id="@+id/tvDeviceAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:text="@string/IpAddress" />

    <TextView
        android:id="@+id/tvDeviceDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/DeviceStatus" />
</LinearLayout>
